--- a/src/Toast.Web/Content/haml/Master.haml
+++ b/src/Toast.Web/Content/haml/Master.haml
@@ -7,6 +7,7 @@
     /[if lt IE 8]
       %link{ rel="Stylesheet" href="/css/blueprint/ie.css" }
     %link{ rel="Stylesheet" href="/css/site.css" }
+    %script{ src="/js/jquery-1.4.1.min.js" }
   %body
     %div.container
       _
